Added GA and title

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,12 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>React App</title>
+    <title>Reactry's Newtab</title>
+    <script type="text/javascript">
+      if (document.location.hostname.search("reactry.github.io") !== -1) {
+        window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-0CZ891LR97');
+      }
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
