--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Reactry's Newtab</title>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-0CZ891LR97"></script>
     <script type="text/javascript">
       if (document.location.hostname.search("reactry.github.io") !== -1) {
         window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'G-0CZ891LR97');
